--- a/RemTool/ClientApp/src/app/contacts-page/contacts-page.component.html
+++ b/RemTool/ClientApp/src/app/contacts-page/contacts-page.component.html
@@ -1,1 +1,44 @@
-<p>contacts-page works!</p>
+<h2>Наши контакты</h2>
+<div class="contacts-wrapper">
+    <div class="contacts__item">
+        <h3 class="contacts__title">Адрес</h3>
+        <p class="contacts__text">
+            <a target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD">г.Москва, МГСА №256</a>
+        </p>
+    </div>
+    <div class="contacts__item">
+        <h3 class="contacts__title">Телефон</h3>
+        <p class="contacts__text">
+            <a href="tel: +7 (495) 123-45-67">
+                +7(926) 247-86-03
+            </a>
+        </p>
+    </div>
+    <div class="contacts__item">
+        <h3 class="contacts__title">Электронная почта</h3>
+        <p class="contacts__text">
+            <a href="mailto:remtool@mail.ru">remtool@mail.ru</a>
+        </p>
+    </div>
+    <div class="contacts__item">
+        <h3 class="contacts__title">График работы</h3>
+        <table class="contacts__hours">
+            <tr>
+                <td>пн-пт:</td>
+                <td>10:00 - 19:00</td>
+            </tr>
+            <tr>
+                <td>сб:</td>
+                <td>10:00 - 17:00</td>
+            </tr>
+            <tr>
+                <td>вс:</td>
+                <td>вых</td>
+            </tr>
+            
+        </table>
+    </div>
+</div>
+<div class="contacts-image">
+    <img src="../../assets/img/Location.png" alt="">
+</div>
