--- a/RemTool/ClientApp/src/app/delivery-page/delivery-page.component.html
+++ b/RemTool/ClientApp/src/app/delivery-page/delivery-page.component.html
@@ -1,1 +1,4 @@
-<p>delivery-page works!</p>
+<h2>Страница в данный момент находится в разработке</h2>
+<div class="design-image">
+    <img src="../../assets/img/User Interface Design.png" alt="">
+</div>
