--- a/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
+++ b/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
@@ -1,38 +1,34 @@
-<nav class="navbar">
-    <h1>
+<nav class="admin-nav nav">
+    <h1 class="nav__item">
         <a routerLink="/">На сайт</a>
     </h1>
 
-    <ul *ngIf="auth.isToken() else login">
-      <!-- <li routerLinkActive="active">
-        <a [routerLink]="['/admin', 'edit-tools']">Редактировать инструменты</a>
-      </li> -->
-      <!-- <li routerLinkActive="active">
-        <a [routerLink]="['/admin', 'edit']">Редактировать инструмент</a>
-      </li> -->
-      <li>
-        <button class="button_light" (click)="createBackup()">Создать бекап</button>
+    <ul *ngIf="auth.isToken() && burger">
+      <li class="nav__item" routerLinkActive="active">
+        <a (click)="burger = false" class="nav__link" [routerLink]="['/admin', 'tooltypes']">Инструменты</a>
       </li>
-      <li>
-        <button class="button_light" (click)="restoreSite()">Восстановить сайт</button>
+      <li class="nav__item" routerLinkActive="active">
+        <a (click)="burger = false" class="nav__link" [routerLink]="['/admin', 'settings']">Настройки</a>
       </li>
-      <li routerLinkActive="active">
-        <a [routerLink]="['/admin', 'tooltypes']">ToolTypes</a>
+      <li class="nav__item" routerLinkActive="active">
+        <a (click)="burger = false" class="nav__link" [routerLink]="['/admin', 'requests']">Заявки</a>
       </li>
       <!-- <li routerLinkActive="active">
         <a [routerLink]="['/admin', 'spareparts']">SpareParts</a>
       </li> -->
-      <li routerLinkActive="active">
-        <a href="#" (click)="logout($event)">Выход</a>
+      <li class="nav__item" routerLinkActive="active">
+        <a class="nav__link" href="#" (click)="logout($event)">Выход</a>
       </li>
     </ul>
-    <ng-template #login>
-        <ul>
-            <li routerLinkActive="active">
-                <a [routerLink]="['/admin', 'login']">Вход</a>
-            </li>
-    
-        </ul>
-    </ng-template>
+    <!-- <ng-template #login> -->
+      <a *ngIf="!auth.isToken()" class="nav__link" [routerLink]="['/admin', 'login']">Вход</a>
+    <!-- </ng-template> -->
+    <input id="burger" type="checkbox" [(ngModel)]="burger" *ngIf="navMobile && auth.isToken()">
+        <label for="burger" class="header__nav_mobile" *ngIf="navMobile && auth.isToken()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </label>
+
 </nav>
 <router-outlet></router-outlet>
