--- a/RemTool/ClientApp/src/app/send-request/send-request.component.html
+++ b/RemTool/ClientApp/src/app/send-request/send-request.component.html
@@ -1,6 +1,36 @@
-<button class="button_light" (click)="sendRequest()">
+<button class="button_light" (click)="sendRequestPopup($event)">
     Оставить заявку
 </button>
-<div class="request-form" ngForm>
-
+<div class="request-container" *ngIf="formPopup" (click)="formPopupClose($event)">
+    <form class="request-form"
+    [formGroup]="requestForm">
+    <button class="request-form__close" (click)="formPopupClose($event)"></button>
+        <div class="request-form__contacts">
+            <input
+            type="email"
+                maxlength="20"
+                formControlName="contacts"
+                placeholder=" ">
+                <!-- <small *ngIf="requestForm.get('phone').errors.pattern">неверный формат</small> -->
+                <span (click)="inputFocus($event)">Ваш телефон или email*</span>
+        </div>
+        <div>
+            <input class="request-form__name"
+                type="text"
+                maxlength="40"
+                formControlName="name"
+                placeholder=" ">
+                <span (click)="inputFocus($event)">Ваше имя</span>
+        </div>
+        <div>
+            <textarea class="request-form__req"
+                name="" id="" cols="" rows=""
+                formControlName="text"
+                placeholder=" "
+                maxlength="150"></textarea>
+                <span (click)="inputFocus($event)">Заявка*</span>
+        </div>
+        <button class="button_light"
+            (click)="sendRequest($event)">Отправить</button>
+    </form>
 </div>
