--- a/RemTool/ClientApp/src/app/tools-page/tools-page.component.html
+++ b/RemTool/ClientApp/src/app/tools-page/tools-page.component.html
@@ -2,7 +2,7 @@
     <app-preloader></app-preloader>
 </div> -->
 <app-preloader *ngIf="this.preloader"></app-preloader>
-
+<h2>{{ category }}</h2>
 <section class="tools-container">
     <a class="tool" *ngFor="let tool of numOfTools; index as i" [routerLink]="[toolIds$[i]]">
         <h4 class="tool__title">{{toolNames$[i]}}</h4>
