--- a/RemTool/ClientApp/src/app/tools-page/tools-page.component.scss
+++ b/RemTool/ClientApp/src/app/tools-page/tools-page.component.scss
@@ -1,9 +1,14 @@
 // input[type="radio"] {
 //     display: none;
 // }
+h2 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 .tools-container {
-    min-height: 200px;
-    margin-top: 60px;
+    min-height: 260px;
+    // margin-top: 60px;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -15,6 +20,7 @@
 }
 
 .tool {
+    position: relative;
     width: 100%;
     height: 200px;
     box-sizing: border-box;
