--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -78,28 +78,56 @@ body {
     }
 }
 
-.navbar, .navbar ul {
+.nav {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    background-color: var(--grey-color);
-    height: 40px;
-}
-
-.navbar {
-    & h1 {
-        margin-left: 26px;
+    justify-content: space-between;
+    height: 60px;
+    & ul {
+        width: calc(100% - 154px);
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
-    & a {
+    &__item {
+        position: relative;
+        display: flex;
+        align-items: center;
+    }
+    &__link {
+        cursor: pointer;
         text-decoration: none;
         color: var(--dark-color);
-        margin-right: 26px;
         font-size: 16px;
         font-weight: 600;
-        &:hover {
-            color: var(--orange-color);
-        }
+        line-height: 60px;
+        margin: 0 16px;
+        white-space: nowrap;
+    }
+    &::before {
+        content: '';
+        position: absolute;
+        top: 40px;
+        left: 0;
+        height: 60px;
+        width: 100%;
+        background-color: var(--grey-color);
+        background: var(--grey-grad);
+        z-index: -1;
     }
 }
+.nav__item {
+    position: relative;
+}
 
+.nav__item_hover .nav__link {
+    color: var(--orange-color);
+}
+.nav__item_hover .arrow-down {
+    transform: rotate(180deg);
+}
+.nav__item_hover .arrow-down > svg > path {
+    stroke: var(--orange-color);
+}
