--- a/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
+++ b/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
@@ -3,7 +3,7 @@
         <a routerLink="/">На сайт</a>
     </h1>
 
-    <ul *ngIf="auth.isToken() && burger">
+    <ul *ngIf="(navMobile && auth.isToken() && burger) || (!navMobile && auth.isToken())">
       <li class="nav__item" routerLinkActive="active">
         <a (click)="burger = false" class="nav__link" [routerLink]="['/admin', 'tooltypes']">Инструменты</a>
       </li>
@@ -24,11 +24,11 @@
       <a *ngIf="!auth.isToken()" class="nav__link" [routerLink]="['/admin', 'login']">Вход</a>
     <!-- </ng-template> -->
     <input id="burger" type="checkbox" [(ngModel)]="burger" *ngIf="navMobile && auth.isToken()">
-        <label for="burger" class="header__nav_mobile" *ngIf="navMobile && auth.isToken()">
-            <div></div>
-            <div></div>
-            <div></div>
-        </label>
+    <label for="burger" class="header__nav_mobile" *ngIf="navMobile && auth.isToken()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </label>
 
 </nav>
 <router-outlet></router-outlet>
