--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -50,7 +50,7 @@
     <hr>
 
     <!-- Бренды -->
-    <div class="create-tool__item brands">
+    <!-- <div class="create-tool__item brands">
       <label>Бренды</label>
       <div class="brand">
         <div *ngFor="let brand of toolType.brands; index as i">
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-  <hr>
+  <hr> -->
 
     <!-- Прайслист -->
     <div class="price">
