--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -317,7 +317,7 @@
                     Москве</a> -->
                 <!-- <a href="https://yandex.ru/maps/213/moscow/category/engine_repairs/184106616/?utm_medium=mapframe&utm_source=maps"
                     style="color:#eee;font-size:12px;position:absolute;top:28px;">Ремонт двигателей в Москве</a> -->
-                <iframe *ngIf="map" src="https://yandex.ru/map-widget/v1/-/CCUEb2Qz0C" width="600" height="280" frameborder="1"
+                <iframe *ngIf="map || true" src="https://yandex.ru/map-widget/v1/-/CCUEb2Qz0C" width="600" height="280" frameborder="1"
                     allowfullscreen="true" style="position:relative;">
                 </iframe>
             </div>
@@ -373,5 +373,5 @@
     <p>Данный интернет-сайт носит информационный характер и ни при каких условиях не является публичной офертой, которая
         определяется положениями Статьи 437 (2) Гражданского кодекса РФ. Для получения подробной информации о наличии и
         стоимости указанных товаров и (или) услуг, пожалуйста, обращайтесь к нашим менеджерам по email или по телефону.
-        РемТул © 2020</p>
+        РемТул © 2021</p>
 </footer>
