--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
@@ -459,6 +459,9 @@ input[type=search] {
         &:not(:last-of-type) {
             border-bottom: 1px solid var(--grey-color);
         }
+        &:nth-last-of-type(3) {
+            border-bottom: 3px solid var(--grey-color);
+        }
     }
     &_visible {
         padding: 16px;
