--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -336,7 +336,23 @@
             <a href="tel: +7 (926) 247 86 03">+7(926)247-86-03</a>
             <a href="mailto:remtool@mail.ru">remtool@mail.ru</a>
             <a target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
-            <span>пн-пт 10:00-20:00</span>
+            <!-- <span>пн-пт 10:00-20:00</span> -->
+            <table class="contacts__hours">
+                <tr>
+                    <td>пн-пт:</td>
+                    <td>10:00 - 19:00</td>
+                </tr>
+                <tr>
+                    <td>сб:</td>
+                    <td>10:00 - 17:00</td>
+                </tr>
+                <tr>
+                    <td>вс:</td>
+                    <td>вых</td>
+                </tr>
+                
+            </table>
+    
             <div class="footer__messengers">
                 <a href="">
                     <svg height="50px" viewBox="0 -39 512.00011 512" width="50px" xmlns="http://www.w3.org/2000/svg">
@@ -352,7 +368,7 @@
                             fill-rule="evenodd" fill="white" />
                     </svg>
                 </a>
-                <a href="">
+                <!-- <a href="">
                     <svg id="Bold" enable-background="new 0 0 24 24" height="50px" viewBox="0 0 24 24" width="50px"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -366,7 +382,7 @@
                         <path
                             d="m13.169 8.104c.961.056 1.427.558 1.477 1.589.018.403.603.375.585-.028-.064-1.346-.766-2.096-2.03-2.166-.385-.023-.421.582-.032.605z" />
                     </svg>
-                </a>
+                </a> -->
             </div>
         </div>
     </div>
