--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
@@ -386,6 +386,9 @@ input[type=search] {
         display: block;
         margin: 0 auto;
     }
+    & table {
+        color: var(--light-color);
+    }
     &::before {
         content: '';
         position: absolute;
