--- a/RemTool/ClientApp/src/app/admin/settings-page/settings-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/settings-page/settings-page.component.html
@@ -1,7 +1,8 @@
 <button class="button_light" (click)="createBackup()">Создать бекап</button>
 <button class="button_light" (click)="restoreSite()">Восстановить сайт</button>
 <!-- Загрузка картинки на сервер -->
-<form [formGroup]="newBackupForm" (change)="loadBackup(newBackupForm.value)">
-  <label class="popup__upload" for="newBackup">Загрузить бэкап</label>
+<form [formGroup]="newBackupForm" (change)="uploadBackup(newBackupForm.value)">
+  <label class="popup__upload" for="newBackup">Загрузить бэкап на сервер</label>
   <input type="file" id="newBackup" formControlName="newBackup" (change)="onSelectFile($event)" style="display: none;">
 </form>
+<button class="button_light" (click)="downloadBackup()">Скачать бэкап</button>
