--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -15,6 +15,11 @@
   <input type="text" [(ngModel)]="toolType.name" class="form-control" placeholder="Название инструмента" />
 </div>
 
+  <div class="create-tool__item">
+  <label>SEO</label>
+  <input type="text" [(ngModel)]="toolType.nameSeo" class="form-control" placeholder="SEO-заголовок" />
+</div>
+
 <hr>
 
 <!-- Категории -->
