--- a/RemTool/ClientApp/src/app/send-request/send-request.component.scss
+++ b/RemTool/ClientApp/src/app/send-request/send-request.component.scss
@@ -12,6 +12,7 @@
 
 .request-form {
     box-shadow: var(--shadow);
+    border: 1px solid var(--orange-color);
     position: absolute;
     top: 50px;
     left: 50%;
@@ -60,6 +61,7 @@
         position: relative;
     }
     & input, & textarea, &label {
+        font-size: 16px;
         width: 100%;
         padding: 0 16px;
         height: 40px;
