скролл в результатах поиска

--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -16,7 +16,7 @@
 </div>
 
   <div class="create-tool__item">
-  <label>SEO</label>
+  <label>Название в родительном падеже</label>
   <input type="text" [(ngModel)]="toolType.nameSeo" class="form-control" placeholder="SEO-заголовок" />
 </div>
 
