дефолтный smtp - яндекс, поле пароля под вид пароля

--- a/RemTool/ClientApp/src/app/admin/settings-page/settings-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/settings-page/settings-page.component.html
@@ -35,7 +35,7 @@
   </tr>
   <tr>
     <td>Пасс хоста-отправителя</td>
-    <td><input type="text" size="40" [(ngModel)]="mailSettings.credentials_Pass"></td>
+    <td><input type="password" size="40" [(ngModel)]="mailSettings.credentials_Pass"></td>
   </tr>
   <tr>
     <td>SMTP хост</td>
