--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -122,7 +122,7 @@
 <hr>
 
 <!-- Добавление инфо об инструменте -->
-<!-- <quill-editor [(ngModel)]="this.toolType.info"></quill-editor> -->
+<quill-editor [(ngModel)]="this.toolType.info"></quill-editor>
 
 <div>
   <button (click)="saveToolType()" class="btn btn-success">
