--- a/RemTool/ClientApp/src/app/send-request/send-request.component.scss
+++ b/RemTool/ClientApp/src/app/send-request/send-request.component.scss
@@ -114,8 +114,12 @@
     }
 }
 
-.request-form__contacts{
+.request-form__email{
     margin-top: 20px;
+}
+
+.warning {
+    color: red !important;
 }
 
 @media (hover: hover) {
