--- a/RemTool/ClientApp/src/app/tool-page/tool-page.component.scss
+++ b/RemTool/ClientApp/src/app/tool-page/tool-page.component.scss
@@ -41,6 +41,8 @@
             display: flex;
             justify-content: space-between;
             padding: 6px 10px;
+            align-items: center;
+            
             & div:nth-of-type(1) {
                 margin-right: 10px;
             }
@@ -60,5 +62,22 @@
         &__row:first-of-type {
             background-color: var(--orange-color);
             font-weight: 600;
+            & div {
+                border: none;
+                width: auto;
+            }
+        }
+        &__serve {
+            width: 100%;
+            padding-right: 6px;
+            border-right: 1px solid var(--light-color);
+        }
+        &__cost {
+            min-width: 56px;
+            text-align: right;
+            // white-space: nowrap;
+        }
+        &__title {
+            text-align: center;
         }
 }
